OMAA Aerodrome GCAA AIP Dump and Info changes + Minor Tweaks
-Aerodrome Information Updated as per GCAA AIP Publication effective 23 JAN 2025

-Tweaks to Document Info; "Mentor" changed to vACC staff designation for "Shahzin Shajid"

-YouTube Social Link added to homepage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,8 @@ extra:
       link: https://instagram.com/arabianvacc
     - icon: fontawesome/brands/github
       link: https://github.com/arabian-vacc
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/@ArabianVACC
 
 # Additional Markdown Extensions to use bundled icon sets
 markdown_extensions:
