--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
     - search.highlight
     - search.share
     - content.code.copy
+    - toc.integrate
   favicon: assets/images/favicon.ico
   icon:
     repo: fontawesome/brands/github
