--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ theme:
         icon: material/weather-night
         name: Shine some light on this!
   features:
+    - navigation.tabs
     - navigation.top
     - navigation.tracking
     - navigation.instant
