--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,11 +25,11 @@ theme:
         name: Shine some light on this!
   features:
     - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - navigation.instant
     - navigation.instant.progress
-    - navigation.sections
     - search.suggest
     - search.highlight
     - search.share
